<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    >
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
               >

                <LinearLayout
                    style="@style/parent"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical"
                    android:layout_weight="3">

                    <ImageView

                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background"
                        android:layout_height="280dp"
                        android:layout_width="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">

                <ImageView android:id="@+id/image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_image_background"
                    android:scaleType="fitCenter"
                    android:src="@drawable/app_logo"
                    />
                <TextView
                    style="@style/headerText"
                    android:layout_gravity="center"
                    android:text="@string/appName"/>
                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">
                <LinearLayout
                    style="@style/linearParent"
                    android:layout_gravity="center"
                    android:padding="@dimen/loginViewsMargin">
                    <TextView
                        style="@style/headerTextPrimary"
                        android:text="@string/register"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/register_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:drawablePadding="12dp"
                        android:drawableTint="@color/colorAccent"
                        android:hint="Username"
                        />

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="12dp"
                        android:drawableTint="@color/colorAccent"
                        android:hint="Password"
                        />

                    <EditText
                        android:id="@+id/register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:text=""
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:drawablePadding="12dp"
                        android:drawableTint="@color/colorAccent"
                        android:hint="Email"
                        />



                    <AutoCompleteTextView
                        android:id="@+id/register_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/sex"
                        android:drawablePadding="8dp"
                        android:drawableTint="@color/colorAccent"
                        android:hint="Gender"
                        />



                    <EditText
                        android:id="@+id/register_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:drawableStart="@drawable/ic_cake_black_24dp"
                        android:drawablePadding="12dp"
                        android:drawableTint="@color/colorAccent"
                        android:text="21/11/1999"
                        android:hint="Birth Date"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cirLoginButton"
                        style="@style/circle"
                        android:text="Login"
                        android:textColor="@color/whiteCardColor"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        />

                    <TextView
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/primaryTextColor"
                        android:text="@string/signup_login_hint"
                        android:layout_marginTop="@dimen/loginViewsMargin"/>
                </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>